# comparty-bot

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  sqlx-data.json
deployment/: .env  Dockerfile  docker-compose.yml  example.env
migrations/: 0001_user.ddl.sql  0002_chat.ddl.sql  0003_rating.ddl.sql  0004_chat_settings.ddl.sql  0004_chat_user.ddl.sql  0005_rating.ddl.sql  0006_chat_setting_update.ddl.sql
src/: main.rs
src/core/: mod.rs
src/core/handlers/: mod.rs
src/core/handlers/callback/: cancel_rating.rs  mod.rs
src/core/handlers/message/: chat_migration.rs  commands.rs  mod.rs  new_members.rs  text.rs
src/core/persistence/: cache.rs  db.rs  mod.rs
src/domains/: mod.rs
src/domains/admin_commands/: controller.rs  domain_builder.rs  mod.rs  service.rs
src/domains/chat/: controller.rs  domain_builder.rs  mod.rs  model.rs  service.rs
src/domains/chat/repositories/: db.rs  mod.rs
src/domains/chat/repositories/queries/chat/: create.sql  migrate_chat_id.sql
src/domains/chat/repositories/queries/chat_settings/: change.sql  create.sql  fetch.sql
src/domains/message/: controller.rs  domain_builder.rs  mod.rs  model.rs  service.rs
src/domains/user/: controller.rs  domain_builder.rs  mod.rs  model.rs  service.rs
src/domains/user/repositories/: cache.rs  db.rs  mod.rs
src/injected/: app_environment.rs  domain_holder.rs  mod.rs
src/lib/: config.rs  helpers.rs  mod.rs  models.rs  tg_helpers.rs  types.rs
src/lib/enums/: chat_settings.rs  datetime.rs  mod.rs  rating.rs
src/lib/errors/: mod.rs
(+7 files in other folders)
